; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/rc/extr_imon.c_display_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/rc/extr_imon.c_display_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.imon_context* }
%struct.imon_context = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [23 x i8] c"no context for device\0A\00", align 1
@ENODEV = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"display not supported by device\0A\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"display is not open\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [21 x i8] c"display port closed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @display_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @display_close(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.imon_context*, align 8
  %7 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  store %struct.imon_context* null, %struct.imon_context** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.file*, %struct.file** %5, align 8
  %9 = getelementptr inbounds %struct.file, %struct.file* %8, i32 0, i32 0
  %10 = load %struct.imon_context*, %struct.imon_context** %9, align 8
  store %struct.imon_context* %10, %struct.imon_context** %6, align 8
  %11 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %12 = icmp ne %struct.imon_context* %11, null
  br i1 %12, label %17, label %13

13:                                               ; preds = %2
  %14 = call i32 @pr_err(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* @ENODEV, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %51

17:                                               ; preds = %2
  %18 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %19 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %18, i32 0, i32 1
  %20 = call i32 @mutex_lock(i32* %19)
  %21 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %22 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %17
  %26 = call i32 @pr_err(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %27 = load i32, i32* @ENODEV, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %7, align 4
  br label %46

29:                                               ; preds = %17
  %30 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %31 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %38, label %34

34:                                               ; preds = %29
  %35 = call i32 @pr_err(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %36 = load i32, i32* @EIO, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %7, align 4
  br label %45

38:                                               ; preds = %29
  %39 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %40 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %39, i32 0, i32 0
  store i32 0, i32* %40, align 4
  %41 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %42 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @dev_dbg(i32 %43, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0))
  br label %45

45:                                               ; preds = %38, %34
  br label %46

46:                                               ; preds = %45, %25
  %47 = load %struct.imon_context*, %struct.imon_context** %6, align 8
  %48 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %47, i32 0, i32 1
  %49 = call i32 @mutex_unlock(i32* %48)
  %50 = load i32, i32* %7, align 4
  store i32 %50, i32* %3, align 4
  br label %51

51:                                               ; preds = %46, %13
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @dev_dbg(i32, i8*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
